# PacketCircle

./: CHANGELOG.md  QUICKSTART.md  README.md
installer/linux-x86_64/: install.sh
installer/linux-x86_64-multi/: install.sh
installer/linux-x86_64-ws44/: install.sh
installer/macos-universal/: install.sh
installer/windows-x86_64/: install.ps1
src/: BUILD.md  CMakeLists.txt  circle_plugin.c  circle_plugin.h  circle_widget.c  circle_widget.h  exported_symbols.txt  packet_analyzer.c  packet_analyzer.h  packetcircle.qrc  ui_bridge.cpp  ui_bridge.h  ui_main_window.c  ui_main_window.h
tools/: README.md  troubleshoot.ps1  troubleshoot.py
